effetto comparsa/scomparsa realizzato

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li> Salvadanai deposito</li>
             </ul>
             <ul>
-                <li>Pgamenti</li>
+                <li>Pagamenti</li>
                 <li>Trasferimetni di denaro</li>
                 <li>Fatture di gruppo</li>
                 <li>Abbonamenti</li>
@@ -57,6 +57,37 @@
                 <li>Assicurazioni Internazionale</li>
                 <li>Assicurazione del deposito</li>
             </ul>
+        </div> 
+        <div class="plan_cost">
+            <ul>
+                <li>Standard</li>
+                <li>Premium</li>
+                <li>metal</li>
+                <li>Contronta i piani</li>
+            </ul>
+        </div> 
+        <div class="information">
+            <ul>
+                <li>Chi siamo</li>
+                <li>Blog</li>
+                <li>Leadership</li>
+                <li>Affiliate</li>
+                <li>Influencer</li>
+                <li>Lavora con noiCultura</li>
+                <li>Diversità e inclusione</li>
+                <li>Contatto</li>
+                <li></li>
+            </ul>
+        </div>
+        <div class="help_section">
+            <ul>
+                <li>Centro Assitenza</li>   
+                <li>Community</li>
+                <li>Sicurezza</li>
+                <li>Stato di Sistema</li>
+                <li>API sviluppatore</li>
+            </ul>
+        </div> 
     </header>
     <!-- /header -->
     <!-- js link -->
