rivesione in classe

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             </div>
             <!-- /right bar navbar -->
         </section>
+        <!-- hiding menus -->
         <div class="funzioni d_flex">
             <ul>
                 <li>Budget e statistiche</li>
@@ -39,7 +40,7 @@
                 <li></li>
             </ul>
             <ul>
-                <li>Azioni</li>
+                <li><a href="">Azioni</a></li>
                 <li>Crypto</li>
                 <li>Prodotti</li>
                 <li>Salvadanai</li>
@@ -89,6 +90,7 @@
             </ul>
         </div> 
     </header>
+    <!-- /hiding menus -->
     <!-- /header -->
     <!-- js link -->
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
